Fixed text-wrap issues

--- a/style.css
+++ b/style.css
@@ -25,15 +25,18 @@ div.buildings {
     text-align: right;
     position: absolute;
     height: 90%;
+    width: 20%;
+    margin-right: 5%;
 }
 
 .buildingContainer {
-    width: 310%;
+    width: 100%;
     border: 3px solid black;
     background-color: lightgray;
     padding: 5px;
     position: relative;
     display: block;
+    margin-right: 5px;
 }
 
 
